--- a/style/dxmp.css
+++ b/style/dxmp.css
@@ -1,3 +1,5 @@
+
+
 body {
 	min-width: 1000px;
 	font: 13px/1.5 "Helvetica Neue", Arial, "Liberation Sans", FreeSans, sans-serif;
@@ -28,7 +30,7 @@ body {
 }
 
 .bodyColor {
-	background-color:#8a8977;		
+	background-color:#777F89;		
 }
 
 
