--- a/style/dxmp.css
+++ b/style/dxmp.css
@@ -12,6 +12,13 @@ body {
 	width: 1000px;
 }
 
+.localpiccontainer {
+	margin-left: auto;
+	margin-right: auto;
+	width: 1000px;
+	height: 150px;
+}
+
 .localgrid {
 	display: inline;
 	float: left;
